--- a/index.html
+++ b/index.html
@@ -1,167 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Cascade Cafe</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Cascade Cafe</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css" />
+</head>
 
-  <body>
-    <h1>The Cascade Cafe</h1>
-    <!-- <img
-      src="https://assets.codepen.io/t-1/nathan-dumlao-6VhPY27jdps-unsplash.jpg"
-      alt="three hands toasting with coffee drinks"
-    /> -->
+<body>
+<div class="container">
+  <h1 class="text-center my-5">The Cascade Cafe</h1>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <h5 class="card-header">Address</h5>
+        <div class="card-body">
+          <h5 class="card-title">Main address</h5>
+          <p>123 Main Street &middot; Smalltown, PA</p>
+          <a href="#" class="btn btn-primary"><svg viewBox="0 0 512 512" width="15" title="phone-alt">
+            <path fill="#ffffff"
+                  d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
+            />
+          </svg> 412-555-0100</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <h5 class="card-header">Our Hours</h5>
+        <div class="card-body">
+          <h5 class="card-title">Hours</h5>
+          <p class="card-text mb-0">Mon. - Thurs.    6 a.m. - 9 p.m.</p>
+          <p class="card-text mb-0">Fri. - Sat.	    6 a.m. - 11 p.m.</p>
+          <p class="card-text mb-0">Sunday	          8 a.m. - 2 p.m.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container w-50 mt-5">
 
-    <address>
-      <svg viewBox="0 0 384 512" width="15" title="map-marker-alt">
-        <path
-          d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
-        />
-      </svg>
-      <p>123 Main Street &middot; Smalltown, PA</p>
-      <svg viewBox="0 0 512 512" width="15" title="phone-alt">
-        <path
-          d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
-        />
-      </svg>
-      <a href="4125550100">412-555-0100</a>
-    </address>
+  <div class="col">
+    <div class="card mb-3">
+      <img src="images/coffe.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Coffee</h5>
+        <p class="card-text"><small class="text-muted">Small: $2  |  Large: $4</small></p>
+        <h6 class="card-title fw-bold">House Blend</h6>
+        <p class="card-text">Smoky, strong, and assertive, just like us.</p>
+        <h6 class="card-title fw-bold">Organic French Roast</h6>
+        <p class="card-text">Smooth and mellow with hints of molasses.</p>
+        <h6 class="card-title fw-bold">Organic Decaf</h6>
+        <p class="card-text">Full bodied and rich, we promise you won't miss the caffiene.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card mb-3">
+      <img src="images/expresso.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Espresso Drinks</h5>
+        <p class="card-text"><small class="text-muted">Small: $2  |  Large: $5</small></p>
+        <h6 class="card-title fw-bold">Machiatto</h6>
+        <p class="card-text">Espressso and steamed milk, served in a demitasse cup.
+          (Size Small Only)</p>
+        <h6 class="card-title fw-bold">Latte</h6>
+        <p class="card-text">Espresso with steamed milk, and sometimes a little art on top.</p>
+        <h6 class="card-title fw-bold">Mocha</h6>
+        <p class="card-text">Espresso with steamed chocolate milk and whipped cream. Also available with white chocolate milk.</p>
+        <h6 class="card-title fw-bold">Americano</h6>
+        <p class="card-text">1 shot espresso, two shots hot water.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card mb-3">
+      <img src="images/tea.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Tea</h5>
+        <p class="card-text mb-0"><small class="text-muted">Served to brave people in our notorious antique tea cups
+          .</small></p>
+        <p class="card-text"><small class="text-muted">Per Cup: $2  |  $200 if you break the cup</small></p>
+        <h6 class="card-title fw-bold">Earl Grey</h6>
+        <p class="card-text">Black tea fragranced with bergamot.</p>
+        <h6 class="card-title fw-bold">Ginger Hibiscus</h6>
+        <p class="card-text">Floral, tart, and spicy. Caffeine free.</p>
+        <h6 class="card-title fw-bold">Cascade Green</h6>
+        <p class="card-text">A blend of green teas hand selected by our master teamaker.</p>
+        <h6 class="card-title fw-bold">Chamomile</h6>
+        <p class="card-text">Soothing and slightly sweet. Try it with honey! Caffeine free.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card mb-3">
+      <img src="images/bakery.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">From the Bakery</h5>
+        <p class="card-text mb-0"><small class="text-muted">Served to brave people in our notorious antique tea cups
+          .</small></p>
+        <p class="card-text"><small class="text-muted">Cookies: $2  |  Muffins &amp; Pastries: $3</small></p>
+        <h6 class="card-title fw-bold">Mallory's Famous Snickerdoodles</h6>
+        <p class="card-text">Creamy cinnamony goodness made from scratch with our founder
+          Mallory's prizewinning recipe.</p>
+        <h6 class="card-title fw-bold">Oatmeal Cookie</h6>
+        <p class="card-text">Packed with rolled oats, raisins, and cranberries, these monster
+          cookies are (almost) good for ya!</p>
+        <h6 class="card-title fw-bold">Mixed Berry Muffins</h6>
+        <p class="card-text">Filled with the best berries of the season and topped with a crumb
+          crust.</p>
+        <h6 class="card-title fw-bold">Croissant</h6>
+        <p class="card-text">Our oversized croissants are buttery, flaky, and usually all sold
+          out by 7 a.m.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <table class="hours">
-      <thead>
-        <tr>
-          <th colspan="2">Hours</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Mon. - Thurs.</td>
-          <td>6 a.m. - 9 p.m.</td>
-        </tr>
-        <tr>
-          <td>Fri. - Sat.</td>
-          <td>6 a.m. - 11 p.m.</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>8 a.m. - 2 p.m.</td>
-        </tr>
-      </tbody>
-    </table>
+<div class="container my-5">
+  <p class="text-center"><small class="text-muted">All rigth reserved © 2021 | The Cascade Cafe</small></p>
+</div>
 
-    <section class="coffee">
-      <h2>Coffee</h2>
-      <p class="prices"><span>Small: $2</span> <span>Large: $4</span></p>
-      <dl>
-        <dt>House Blend</dt>
-        <dd class="description">
-          <p>Smoky, strong, and assertive, just like us.</p>
-        </dd>
-        <dt>Organic French Roast</dt>
-        <dd class="description">
-          <p>Smooth and mellow with hints of molasses.</p>
-        </dd>
-        <dt>Organic Decaf</dt>
-        <dd class="description">
-          <p>Full bodied and rich, we promise you won't miss the caffiene.</p>
-        </dd>
-      </dl>
-    </section>
-
-    <section class="espresso">
-      <h2>Espresso Drinks</h2>
-      <p class="prices"><span>Small: $3</span> <span>Large: $5</span></p>
-      <dl>
-        <dt>Machiatto</dt>
-        <dd class="description">
-          <p>
-            Espressso and steamed milk, served in a demitasse cup.
-            <span class="note">(Size Small Only)</span>
-          </p>
-        </dd>
-        <dt>Latte</dt>
-        <dd class="description">
-          <p>Espresso with steamed milk, and sometimes a little art on top.</p>
-        </dd>
-        <dt>Mocha</dt>
-        <dd class="description">
-          <p>
-            Espresso with steamed chocolate milk and whipped cream. Also
-            available with white chocolate milk.
-          </p>
-        </dd>
-        <dt>Americano</dt>
-        <dd class="description">
-          <p>1 shot espresso, two shots hot water.</p>
-        </dd>
-      </dl>
-    </section>
-
-    <section class="tea">
-      <h2>Tea</h2>
-      <p>Served to brave people in our notorious antique tea cups.</p>
-      <p class="prices">
-        <span>Per Cup: $2</span>
-        <span class="note">$200 if you break the cup</span>
-      </p>
-      <dl>
-        <dt>Earl Grey</dt>
-        <dd class="description">
-          <p>Black tea fragranced with bergamot.</p>
-        </dd>
-        <dt>Ginger Hibiscus</dt>
-        <dd class="description">
-          <p>Floral, tart, and spicy. Caffeine free.</p>
-        </dd>
-        <dt>Cascade Green</dt>
-        <dd class="description">
-          <p>A blend of green teas hand selected by our master teamaker.</p>
-        </dd>
-        <dt>Chamomile</dt>
-        <dd class="description">
-          <p>Soothing and slightly sweet. Try it with honey! Caffeine free.</p>
-        </dd>
-      </dl>
-    </section>
-
-    <section class="bakery">
-      <h2>From the Bakery</h2>
-      <p class="prices">
-        <span>Cookies: $2</span> <span>Muffins &amp; Pastries: $3</span>
-      </p>
-      <dl>
-        <dt>Mallory's Famous Snickerdoodles</dt>
-        <dd class="description">
-          <p>
-            Creamy cinnamony goodness made from scratch with our founder
-            Mallory's prizewinning recipe.
-          </p>
-        </dd>
-        <dt>Oatmeal Cookie</dt>
-        <dd class="description">
-          <p>
-            Packed with rolled oats, raisins, and cranberries, these monster
-            cookies are (almost) good for ya!
-          </p>
-        </dd>
-        <dt>Mixed Berry Muffins</dt>
-        <dd class="description">
-          <p>
-            Filled with the best berries of the season and topped with a crumb
-            crust.
-          </p>
-        </dd>
-        <dt>Croissant</dt>
-        <dd class="description">
-          <p>
-            Our oversized croissants are buttery, flaky, and usually all sold
-            out by 7 a.m.
-          </p>
-        </dd>
-      </dl>
-    </section>
-  </body>
+</body>
 </html>
