--- a/index.html
+++ b/index.html
@@ -15,43 +15,6 @@
       alt="three hands toasting with coffee drinks"
     /> -->
 
-    <address>
-      <svg viewBox="0 0 384 512" width="15" title="map-marker-alt">
-        <path
-          d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
-        />
-      </svg>
-      <p>123 Main Street &middot; Smalltown, PA</p>
-      <svg viewBox="0 0 512 512" width="15" title="phone-alt">
-        <path
-          d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
-        />
-      </svg>
-      <a href="4125550100">412-555-0100</a>
-    </address>
-
-    <table class="hours">
-      <thead>
-        <tr>
-          <th colspan="2">Hours</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Mon. - Thurs.</td>
-          <td>6 a.m. - 9 p.m.</td>
-        </tr>
-        <tr>
-          <td>Fri. - Sat.</td>
-          <td>6 a.m. - 11 p.m.</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>8 a.m. - 2 p.m.</td>
-        </tr>
-      </tbody>
-    </table>
-
     <section class="coffee">
       <h2>Coffee</h2>
       <p class="prices"><span>Small: $2</span> <span>Large: $4</span></p>
@@ -102,7 +65,9 @@
 
     <section class="tea">
       <h2>Tea</h2>
-      <p>Served to brave people in our notorious antique tea cups.</p>
+      <p class="note">
+        Served to brave people in our notorious antique tea cups.
+      </p>
       <p class="prices">
         <span>Per Cup: $2</span>
         <span class="note">$200 if you break the cup</span>
@@ -162,6 +127,48 @@
           </p>
         </dd>
       </dl>
+    </section>
+
+    <section class="address">
+      <h2>Address</h2>
+      <address>
+        <p>
+          <svg viewBox="0 0 384 512" width="15" title="map-marker-alt">
+            <path
+              d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
+            />
+          </svg>
+          123 Main Street &middot; Smalltown, PA
+        </p>
+        <p>
+          <svg viewBox="0 0 512 512" width="15" title="phone-alt">
+            <path
+              d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
+            />
+          </svg>
+          <a href="4125550100">412-555-0100</a>
+        </p>
+      </address>
+    </section>
+
+    <section class="hours">
+      <h2>Hours</h2>
+      <table>
+        <tbody>
+          <tr>
+            <td>Mon. - Thurs.</td>
+            <td>6 a.m. - 9 p.m.</td>
+          </tr>
+          <tr>
+            <td>Fri. - Sat.</td>
+            <td>6 a.m. - 11 p.m.</td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>8 a.m. - 2 p.m.</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </body>
 </html>
