--- a/index.html
+++ b/index.html
@@ -129,8 +129,26 @@
       </dl>
     </section>
 
+    <section class="hours">
+      <table>
+        <tbody>
+          <tr>
+            <td>Mon - Thurs</td>
+            <td>06 am - 09 pm</td>
+          </tr>
+          <tr>
+            <td>Fri - Sat</td>
+            <td>06 am - 11 pm</td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>08 am - 02 pm</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
     <section class="address">
-      <h2>Address</h2>
       <address>
         <p>
           <svg viewBox="0 0 384 512" width="15" title="map-marker-alt">
@@ -149,26 +167,6 @@
           <a href="4125550100">412-555-0100</a>
         </p>
       </address>
-    </section>
-
-    <section class="hours">
-      <h2>Hours</h2>
-      <table>
-        <tbody>
-          <tr>
-            <td>Mon. - Thurs.</td>
-            <td>6 a.m. - 9 p.m.</td>
-          </tr>
-          <tr>
-            <td>Fri. - Sat.</td>
-            <td>6 a.m. - 11 p.m.</td>
-          </tr>
-          <tr>
-            <td>Sunday</td>
-            <td>8 a.m. - 2 p.m.</td>
-          </tr>
-        </tbody>
-      </table>
     </section>
   </body>
 </html>
